Finished join site

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <span class="divider"></span>
           <h3 class="subhead-main">A flexible peer-to-peer network<br /> to reduce your content delivery costs</h3>
           <div class="cta">
-            <a class="button button-outlined" href="">Try it now</a>
+            <a class="button button-outlined" href="/docs/join/join.html">Try it now</a>
             <!-- <a class="button button-outlined" href=""></a> -->
           </div>
         </div>
@@ -114,9 +114,10 @@
                     </div>
                     <h5 class="content-center"><strong>Simple integration into your existing architecture</strong></h5>
                     <p>Modern day platforms are growing ever more complicated, combining hosting, multiple content delivery networks and data anlytic services.</p>
-                    <p>The DataBridge Network can be seamlessy added on top of your existing architecture in a few clicks.</p>
+                    <p>The DataBridge Network can be seamlessy added on top of your existing architecture in a few clicks and dynamically integrates your existing servers and CDNs into a single network.</p>
                 </div>
             </div>
+
             <div class="content-center our-aim">
                 <div class="illustration">
                     <!-- <img src="./images/.svg" /> -->
