--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
 <meta property="og:image:width" contentlogo="146" />
 <meta property="og:image:height" content="166" />
 
-<!-- <link href="https://ipfs.io/index.xml" rel="alternate feed" type="application/rss+xml" title="IPFS is the Distributed Web" /> -->
 <script src="//use.typekit.net/qbm6mtp.js"></script>
 <script>
   try {
@@ -42,7 +41,7 @@
     <header class="header-has-logo" id="stars">
   <div class="container cf">
     <h1 class="pull-left">
-      <a href="./" class="logo ipfs-logo transition transition-fadeout">DataBridge</a>
+      <a href="./" class="logo databridge-logo transition transition-fadeout">DataBridge</a>
     </h1>
     <nav role="navigation" class="pull-right top-nav top-nav-dark cf">
       <input id="menu-toggle" type="checkbox" class="menu-toggle">
@@ -54,6 +53,7 @@
           <li><a href="./#uses">Uses</a></li>
 
         <li><a href="/docs/join/join.html" >Join</a></li>
+        <li><a href="../docs/contact/contact.html">Contact us</a></li>
         <!-- <li><a href="./media" >Media</a></li>
         <li><a href="./docs" >Docs</a></li>
         <li><a href="./blog" >Blog</a></li> -->
@@ -251,14 +251,14 @@
         <div class="grid-flex-cell">
           <ul class="sitemap unstyled">
             <li class="sitemap-head">DataBridge</li>
-            <li><a href="">About</a></li>
-            <li><a href="">Contact us</a></li>
+            <li><a href="./">About</a></li>
+            <li><a href="./docs/contact/contact.html">Contact us</a></li>
           </ul>
         </div>
         <div class="grid-flex-cell">
           <ul class="sitemap unstyled">
             <li class="sitemap-head">DataBridge Network</li>
-            <li><a href="">Docs</a></li>
+            <li><a href="./docs/join/join.html">Join</a></li>
           </ul>
         </div>
       </div>
@@ -276,7 +276,7 @@
         </ul>
       </div> -->
     </div>
-    <p class="footer-copyright center">© DataBridge </p>
+    <p class="footer-copyright center">© DataBridge | Design of this page was inspired by the work of Protocol Labs.</p>
   </div>
 </footer>
 <!--  Eventually, add stars -->
