--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 
 <meta property="og:type" content="website" />
-<meta property="og:description" content="A distributed network for optimized content delivery on the internet." />
+<meta property="og:description" content="A distributed network for optimized content delivery on the Internet." />
 <meta property="og:title" content="DataBridge" />
 <meta property="og:site_name" content="DataBridgeNetwork" />
 <meta property="og:url" content="https://databridgenetwork.com" />
@@ -82,15 +82,15 @@
 
     <div class="container">
         <section id="why">
-            <h2 class="content-center">The way the internet was meant to be</h2>
+            <h2 class="content-center">The way the Internet was meant to be</h2>
             <div class="grid-flex-container">
                 <div class="grid-flex-cell-1of2">
                     <div class="illustration">
                         <!-- <img src="./images/.svg" /> -->
                     </div>
                     <h5 class="content-center"><strong>Central servers are inefficient</strong></h5>
-                    <p>With a central server or a CDN, users can only be served a file from a single server at a time, instead of getting pieces from multiple computers simultaneously. As server are not allocated instantly, server power always lags behind network usage. This results in a waste of ressources, or in contrary, slow performance. </p>
-                    <p>The DataBridge Network makes it possible to distribute high volumes of data with high efficiency and speed. As more users result in better performance, the DataBridge Network scales dynamically and is the most flexible network to this date.</p>
+                    <p>With a central server or a CDN, users can only be served a file from a single server at a time, instead of getting pieces from multiple computers simultaneously. As servers are not allocated instantly, server power always lags behind network usage. This results in a waste of resources, or in contrary, slow performance. </p>
+                    <p>The DataBridge Network makes it possible to distribute high volumes of data with efficiency and speed. As more users result in better performance, the DataBridge Network scales dynamically and is the most flexible network to this date.</p>
                 </div>
                 <div class="grid-flex-cell-1of2">
                     <div class="illustration">
@@ -105,7 +105,7 @@
                         <!-- <img src="./images/.svg" /> -->
                     </div>
                     <h5 class="content-center"><strong>Servers are energy-hungry</strong></h5>
-                    <p><a href="http://etheses.whiterose.ac.uk/7866/1/EEinCDNs.pdf"> Energy consumption is expected to become an internet bottleneck in the next years. </a> Central servers consume up to 70% of the total transmission energy and are responsible for the associated carbon dioxide (CO2) and heat emissions. <a href="http://etheses.whiterose.ac.uk/7866/1/EEinCDNs.pdf">In 2020, communications networks will emit as much CO2 as civil aviation.</a> Reducing the ecological impact of the internet will be one of the major challenges of the next decade.</p>
+                    <p><a href="http://etheses.whiterose.ac.uk/7866/1/EEinCDNs.pdf"> Energy consumption is expected to become an Internet bottleneck in the next years. </a> Central servers consume up to 70% of the total transmission energy and are responsible for the associated carbon dioxide (CO2) and heat emissions. <a href="http://etheses.whiterose.ac.uk/7866/1/EEinCDNs.pdf">In 2020, communications networks will emit as much CO2 as civil aviation.</a> Reducing the ecological impact of the Internet will be one of the major challenges of the next decade.</p>
                     <p>The DataBridge Network offers an ecologically clean alternative to server access.</p>
                 </div>
                 <div class="grid-flex-cell-1of2">
@@ -113,8 +113,8 @@
                         <!-- <img src="./images/.svg" /> -->
                     </div>
                     <h5 class="content-center"><strong>Simple integration into your existing architecture</strong></h5>
-                    <p>Modern day platforms are growing ever more complicated, combining hosting, multiple content delivery networks and data anlytic services.</p>
-                    <p>The DataBridge Network can be seamlessy added on top of your existing architecture in a few clicks and dynamically integrates your existing servers and CDNs into a single network.</p>
+                    <p>Modern day platforms are growing ever more complicated, combining hosting, multiple content delivery networks and data analytic services.</p>
+                    <p>The DataBridge Network can be added seamlessly on top of your existing architecture in a few clicks and dynamically integrates your existing servers and CDNs into a single network.</p>
                 </div>
             </div>
 
@@ -222,7 +222,7 @@
                         <!-- <img src="./images/illustration-media.svg" /> -->
                     </div>
                     <h5>News & Media</h5>
-                    <p>DataBridge brings the freedom and independent spirit of the web at full speed and at low cost. The DataBridge Network can help deliver content in a way which can save you considerable money.</p>
+                    <p>DataBridge brings the freedom and independent spirit of the web at full speed and at low cost. The DataBridge Network can help deliver content in a way that can save you considerable money.</p>
 
                 </div>
             </div>
