Fixed syntactical error

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         <!-- <img src="./images/.svg" /> -->
                     </div>
                     <h5 class="content-center"><strong>Central servers are inefficient</strong></h5>
-                    <p>With a central server or a CDN, users can only be served a file from a single server at a time, instead of getting pieces from multiple computers simultaneously. As servers are not allocated instantly, server power always lags behind network usage. This results in a waste of resources, or in contrary, slow performance. </p>
+                    <p>With a central server or a CDN, users can only be served a file from a single server at a time, instead of getting pieces from multiple computers simultaneously. As servers are not allocated instantly, server power always lags behind network usage. This results in a waste of resources, or the contrary, slow performance. </p>
                     <p>The DataBridge Network makes it possible to distribute high volumes of data with efficiency and speed. As more users result in better performance, the DataBridge Network scales dynamically and is the most flexible network to this date.</p>
                 </div>
                 <div class="grid-flex-cell-1of2">
