Change name to vlynt

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 <link rel="stylesheet" href="./css/main.css" />
 <link rel="icon" type="image/png" href="./images/Logo2.png">
 
-<title>DataBridge</title>
+<title>Vlynt</title>
 
 
 
 <meta property="og:type" content="website" />
 <meta property="og:description" content="A distributed network for optimized content delivery on the Internet." />
-<meta property="og:title" content="DataBridge" />
-<meta property="og:site_name" content="DataBridgeNetwork" />
-<meta property="og:url" content="https://databridgenetwork.com" />
+<meta property="og:title" content="Vlynt" />
+<meta property="og:site_name" content="Vlynt" />
+<meta property="og:url" content="https://vlynt.com" />
 <meta property="og:locale" content="en_US">
 <meta property="og:image" content="/images/Logo2.png" />
 <meta property="og:image:type" content="image/png" />
@@ -41,7 +41,7 @@
     <header class="header-has-logo" id="stars">
   <div class="container cf">
     <h1 class="pull-left">
-      <a href="./" class="logo databridge-logo transition transition-fadeout">DataBridge</a>
+      <a href="./" class="logo databridge-logo transition transition-fadeout">Vlynt</a>
     </h1>
     <nav role="navigation" class="pull-right top-nav top-nav-dark cf">
       <input id="menu-toggle" type="checkbox" class="menu-toggle">
@@ -62,7 +62,7 @@
 
       <div class="hero hero-home">
         <div class="hero-text">
-          <h2 class="headline-main">The DataBridge Network</h2>
+          <h2 class="headline-main">The Vlynt Network</h2>
           <span class="divider"></span>
           <h3 class="subhead-main">A flexible peer-to-peer network<br /> to reduce your content delivery costs</h3>
           <div class="cta">
@@ -90,7 +90,7 @@
                     </div>
                     <h5 class="content-center"><strong>Central servers are inefficient</strong></h5>
                     <p>With a central server or a CDN, users can only be served a file from a single server at a time, instead of getting pieces from multiple computers simultaneously. As servers are not allocated instantly, server power always lags behind network usage. This results in a waste of resources, or on the contrary, slow performance. </p>
-                    <p>The DataBridge Network makes it possible to distribute high volumes of data with efficiency and speed. As more users result in better performance, the DataBridge Network scales dynamically and is the most flexible network to this date.</p>
+                    <p>The Vlynt Network makes it possible to distribute high volumes of data with efficiency and speed. As more users result in better performance, the Vlynt Network scales dynamically and is the most flexible network to this date.</p>
                 </div>
                 <div class="grid-flex-cell-1of2">
                     <div class="illustration">
@@ -98,7 +98,7 @@
                     </div>
                     <h5 class="content-center"><strong>Bandwidth is expensive</strong></h5>
                     <p>With ever more traffic, high-resolution images and 4k video, bandwidth costs are increasingly becoming a barrier for delivering content online. By integrating users as active components of the network, a distributed solution does not rely on bandwidth for most of its content delivery. <a href="http://math.oregonstate.edu/~kovchegy/web/papers/p2p-vdn.pdf">With video content, such a P2P approach could save 60% in distribution costs.</a> </p>
-                    <p>The DataBridge Network effectively reduces bandwidth costs through distributed content delivery.</p>
+                    <p>The Vlynt Network effectively reduces bandwidth costs through distributed content delivery.</p>
                 </div>
                 <div class="grid-flex-cell-1of2">
                     <div class="illustration">
@@ -106,7 +106,7 @@
                     </div>
                     <h5 class="content-center"><strong>Servers are energy-hungry</strong></h5>
                     <p><a href="http://etheses.whiterose.ac.uk/7866/1/EEinCDNs.pdf"> Energy consumption is expected to become an Internet bottleneck in the next years. </a> Central servers consume up to 70% of the total transmission energy and are responsible for the associated carbon dioxide (CO2) and heat emissions. <a href="http://etheses.whiterose.ac.uk/7866/1/EEinCDNs.pdf">In 2020, communications networks will emit as much CO2 as civil aviation.</a> Reducing the ecological impact of the Internet will be one of the major challenges of the next decade.</p>
-                    <p>The DataBridge Network offers an ecologically clean alternative to server access.</p>
+                    <p>The Vlynt Network offers an ecologically clean alternative to server access.</p>
                 </div>
                 <div class="grid-flex-cell-1of2">
                     <div class="illustration">
@@ -114,7 +114,7 @@
                     </div>
                     <h5 class="content-center"><strong>Simple integration into your existing architecture</strong></h5>
                     <p>Modern day platforms are growing ever more complicated, combining hosting, multiple content delivery networks and data analytic services.</p>
-                    <p>The DataBridge Network can be added seamlessly on top of your existing architecture in a few clicks and dynamically integrates your existing servers and CDNs into a single network.</p>
+                    <p>The Vlynt Network can be added seamlessly on top of your existing architecture in a few clicks and dynamically integrates your existing servers and CDNs into a single network.</p>
                 </div>
             </div>
 
@@ -122,13 +122,13 @@
                 <div class="illustration">
                     <!-- <img src="./images/.svg" /> -->
                 </div>
-                <h3>DataBridge aims to become a new standard for content delivery and build a better web for all of us: <br/> Fast, Safe and Clean.</h3>
+                <h3>Vlynt aims to become a new standard for content delivery and build a better web for all of us: <br/> Fast, Safe and Clean.</h3>
             </div>
         </section>
 
         <!-- <section id="how">
             <div class="content-center mb2">
-                <h2>Here's how the DataBridge Network works</h2>
+                <h2>Here's how the Vlynt Network works</h2>
                 <h5>Let's take a look at what happens when you add your website to the network:</h5>
             </div>
             <div class="how-item">
@@ -172,34 +172,34 @@
                 </div>
             </div>
             <div class="content-center">
-                <h5>For a deeper look at the DataBridge Network</h5>
+                <h5>For a deeper look at the Vlynt Network</h5>
                 <a class="button button-primary" href="">Read the white paper</a>
             </div>
         </section> -->
 
         <section id="uses" class="content-center">
-            <h2>The DataBridge Network is useful here and now</h2>
+            <h2>The Vlynt Network is useful here and now</h2>
             <div class="grid-flex-container">
                 <div class="grid-flex-cell">
                     <div class="illustration">
                         <!-- <img src="./images/illustration-ecommerce.svg" /> -->
                     </div>
                     <h5>E-Commerce</h5>
-                    <p>In E-commerce every millisecond matters. Stacked on top of your CDN, the DataBridge Network provides high performance and a maximum reach.</p>
+                    <p>In E-commerce every millisecond matters. Stacked on top of your CDN, the Vlynt Network provides high performance and a maximum reach.</p>
                 </div>
                 <div class="grid-flex-cell service-providers">
                     <div class="illustration">
                         <!-- <img src="./images/illustration-service.svg" /> -->
                     </div>
                     <h5>Service providers</h5>
-                    <p>If your company delivers huge datasets to its users, a peer-to-peer approach could save you millions in bandwidth. DataBridge can provide secure and efficient P2P content delivery.</p>
+                    <p>If your company delivers huge datasets to its users, a peer-to-peer approach could save you millions in bandwidth. Vlynt can provide secure and efficient P2P content delivery.</p>
                 </div>
                 <div class="grid-flex-cell">
                     <div class="illustration">
                         <!-- <img src="./images/illustration-content.svg" /> -->
                     </div>
                     <h5>Content Providers</h5>
-                    <p>If you are distributing and marketing large amounts of content, the DataBridge Network offers fast performance whilst effectively reducing your bandwidth costs.</p>
+                    <p>If you are distributing and marketing large amounts of content, the Vlynt Network offers fast performance whilst effectively reducing your bandwidth costs.</p>
                 </div>
             </div>
             <div class="grid-flex-container">
@@ -208,21 +208,21 @@
                         <!-- <img src="./images/illustration-developing.svg" /> -->
                     </div>
                     <h5>Developing world</h5>
-                    <p>High latency networks and absence of servers are a real barrier of entry to developing world business. The DataBridge Network provides resilient access to data, independent of low latency or connectivity to the central servers.</p>
+                    <p>High latency networks and absence of servers are a real barrier of entry to developing world business. The Vlynt Network provides resilient access to data, independent of low latency or connectivity to the central servers.</p>
                 </div>
                 <div class="grid-flex-cell">
                     <div class="illustration">
                         <!-- <img src="./images/illustration-premium.svg" /> -->
                     </div>
                     <h5>Premium Websites</h5>
-                    <p>Fluidity and performance are a premium website's most valuable assets. In combination with central servers, the DataBridge delivers the best experience all around the world.</p>
+                    <p>Fluidity and performance are a premium website's most valuable assets. In combination with central servers, the Vlynt delivers the best experience all around the world.</p>
                 </div>
                 <div class="grid-flex-cell">
                     <div class="illustration">
                         <!-- <img src="./images/illustration-media.svg" /> -->
                     </div>
                     <h5>News & Media</h5>
-                    <p>DataBridge brings the freedom and independent spirit of the web at full speed and at low cost. The DataBridge Network can help deliver content in a way that can save you considerable money.</p>
+                    <p>Vlynt brings the freedom and independent spirit of the web at full speed and at low cost. The Vlynt Network can help deliver content in a way that can save you considerable money.</p>
 
                 </div>
             </div>
@@ -250,14 +250,14 @@
       <div class="sitemap-menu grid-flex-container">
         <div class="grid-flex-cell">
           <ul class="sitemap unstyled">
-            <li class="sitemap-head">DataBridge</li>
+            <li class="sitemap-head">Vlynt</li>
             <li><a href="./">About</a></li>
             <li><a href="./docs/contact/contact.html">Contact us</a></li>
           </ul>
         </div>
         <div class="grid-flex-cell">
           <ul class="sitemap unstyled">
-            <li class="sitemap-head">DataBridge Network</li>
+            <li class="sitemap-head">Vlynt Network</li>
             <li><a href="./docs/join/join.html">Join</a></li>
           </ul>
         </div>
@@ -276,7 +276,7 @@
         </ul>
       </div> -->
     </div>
-    <p class="footer-copyright center">© DataBridge | Design of this page was inspired by the work of Protocol Labs.</p>
+    <p class="footer-copyright center">© Vlynt | Design of this page was inspired by the work of Protocol Labs.</p>
   </div>
 </footer>
 <!--  Eventually, add stars -->
