--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <header class="header-has-logo" id="stars">
   <div class="container cf">
     <h1 class="pull-left">
-      <a href="./" class="logo databridge-logo transition transition-fadeout">Vlynt</a>
+      <a href="./" class="logo vlynt-logo transition transition-fadeout">Vlynt</a>
     </h1>
     <nav role="navigation" class="pull-right top-nav top-nav-dark cf">
       <input id="menu-toggle" type="checkbox" class="menu-toggle">
